# SpeechCore

./: .gitignore  CMakeLists.txt  SConstruct  python_readme.md  readme.md  setup.py
.github/workflows/: build.yml  build_library.yml  build_python_wheel.yml
SpeechCore.CrossPlatform/: SpeechCore.CrossPlatform.csproj  SpeechCore.cs  readme.md
SpeechCore.CrossPlatform/buildTransitive/: SpeechCore.CrossPlatform.targets
VC++/: SpeechCore.vcxproj
bindings/DotNET/: speech_core.cs
bindings/java/: SpeechCore.java
examples/DotNET/: program.cs
examples/c/: example.c
examples/c++/: example.cpp
examples/java/: SpeechCoreExample.java
examples/python/: requirements.txt
include/: SpeechCore.h
speech_core/: bindings.cpp
src/: SpeechCore.cpp  SpeechCore.rc  SpeechCore_JNI.cpp  SpeechCore_JNI.h
src/SCDrivers/: AVTts.cpp  SCDriver.h  SpeechDispatcher.cpp  drivers.h  jaws.cpp  jaws.h  nvda.cpp  nvda.h  pc_talker.cpp  pc_talker.h  sapi5driver.cpp
src/wrappers/: SapiSpeech.cpp  saapi.cpp  zdsrapi.cpp
